Add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "switchblade-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://switchblade.xyz/",
   "dependencies": {
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
